package moprocoeval.library;

public enum CopyStatus {
  AVAILABLE,
  ON_LOAN
}
