@startuml
hide circle

class Library {
  +registerMember(member: Member)
  +addBook(book: Book)
}

class Member {
  +memberId: String
  +name: String
  +borrowCopy(copy: Copy): Loan
  +returnCopy(copy: Copy)
}

class Book {
  +author: String
  +isbn: String
  +title: String
}

class Copy {
  +copyId: String
  +status: CopyStatus
}

class Loan {
  +loanDate: Date
  +dueDate: Date
  +returnDate: Date [0..1]
  +closed: Boolean
}

enum CopyStatus {
  Available
  OnLoan
}

Library "+libraries 1..*" o-- "+members *" Member: hasMembers
Library "+library 1" *-- "+books *" Book: hasBooks
Book "+book 1" *-- "+copies *" Copy: hasCopies
Member "+member 1" o-- "+loans *" Loan: hasLoans
Copy "+copy 1" o-- "+loans *" Loan: isBorrowedBy
@enduml